# cristalix-mod-loader

./: .gitignore  CMakeLists.txt  README.MD
dll/: main.cpp
dll/class/: class_injector.cpp  class_injector.h  classes.h
dll/injector/: injector.cpp  injector.h
java/: JavaClassPreparer.java
loader/: CristalixModLoader.java
mod-loader-java/: .gitignore  build.gradle  settings.gradle
mod-loader-java/gradle/wrapper/: gradle-wrapper.properties
mod-loader-java/src/main/java/ru/dargen/loader/: CristalixModLoader.java
mod-loader-java/src/main/java/ru/dargen/loader/cristalix/: ClassLoaderBypass.java  CristalixMappings.java  CristalixWrapper.java
mod-loader-java/src/main/java/ru/dargen/loader/cristalix/obfuscator/: CristalixObfuscator.java  CristalixObfuscatorData.java
mod-loader-java/src/main/java/ru/dargen/loader/mapping/: ClassMapping.java  MappingReader.java  Mappings.java
mod-loader-java/src/main/java/ru/dargen/loader/transformer/: ClassTransformer.java  InstructionTransformer.java
mod-loader-java/src/main/java/ru/dargen/loader/util/: Access.java  Asm.java  Downloader.java  File.java  Jars.java  RegEx.java
